# pragmata

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  pr-labeler.yml  release.yml
annotation_testing_uat/: 01_setup.py  02_import.py  03_export.py  04_teardown.py  05_users_delete.py
annotation_uat/: 01_setup.py  02_import.py  03_export.py  04_teardown.py  05_users_delete.py  credentials.txt  issues.md  sample_data.json  walkthrough.md
annotation_uat/annotation/exports/20260401T234758/: retrieval.csv
annotation_uat/annotation/exports/20260401T235404/: generation.csv  grounding.csv  retrieval.csv
annotation_uat/annotation/exports/20260402T000621/: generation.csv  grounding.csv  retrieval.csv
annotation_uat/annotation/exports/uat_iaa_test/: generation.csv  grounding.csv  retrieval.csv
apps/annotation/: .env.dev.example  docker-compose.dev.yml
deploy/annotation/: .env.dev.example  .env.prod.example  .env.uat.example  README.md  docker-compose.dev.override.yml  docker-compose.dev.yml  users.example.json
deploy/annotation/input_records/: topic1.example.jsonl
deploy/annotation/ws_setup_configs/: topic.example.yaml  topic1.example.yaml
docs/: README.md  glossary.md
docs/decisions/: 0002-evaluation-approach.md  0004-synthetic-query-generation.md  0005-contract-layer-tooling.md  0007-packaging-invocation-surface.md  0009-annotation-schema-configurability.md  0010-annotation-multi-dataset-architecture.md  0011-annotation-import-formats.md  0012-annotation-per-item-calibration-partition.md  0012-per-item-calibration-partition.md  README.md
docs/design/: README.md  annotation-bootstrap.md  annotation-export-pipeline.md  annotation-import-pipeline.md  annotation-interface.md  annotation-stack-design.md  annotation-stack-lifecycle.md  annotation-user-management.md  config-and-settings.md  containerisation-and-deployment.md  distribution-and-deployment.md  eval-scoring-metrics.md  infra-package-contracts.md  install-and-bootstrap.md  packaging-invocation-surface.md
examples/annotation/: README.md
scripts/: backfill_n_retrieved_chunks.py
src/chatboteval/: __init__.py
src/chatboteval/annotation/: __init__.py  schemas.py  setup.py
src/chatboteval/api/: __init__.py  annotation_import.py  annotation_setup.py  annotation_task_config.py  info.py  querygen.py  version.py
src/chatboteval/cli/: __init__.py  app.py
src/chatboteval/cli/commands/: __init__.py  __init__py
src/chatboteval/core/: __init__.py  annotation_setup.py  csv_io.py  types.py
src/chatboteval/core/annotation/: __init__.py  argilla_ops.py  argilla_settings.py  collapsible_field.html  import_.py  record_builder.py  setup.py
src/chatboteval/querygen/: __init__.py
src/pragmata/: __init__.py
src/pragmata/annotation/: __init__.py  docker-compose.yml
src/pragmata/api/: __init__.py  _argilla_creds.py  _env.py  _error_log.py  annotation_export.py  annotation_iaa.py  annotation_import.py  annotation_incomplete.py  annotation_setup.py  annotation_status.py  eval.py  querygen.py
src/pragmata/cli/: app.py  parsing.py
src/pragmata/core/: atomic_io.py  types.py
src/pragmata/eval/: __init__.py
src/pragmata/querygen/: __init__.py
tests/: conftest.py  test_annotation_export.py  test_annotation_import.py  test_annotation_namespace.py  test_annotation_packaging.py  test_annotation_task.py  test_cli_querygen.py  test_csv_io.py  test_facade_lazy.py  test_invocation_surface.py  test_paths.py  test_querygen.py  test_querygen_input.py  test_querygen_input_contract.py  test_querygen_namespace.py  test_querygen_output.py  test_querygen_paths.py  test_querygen_plan.py  test_querygen_realize.py  test_querygen_settings.py  test_settings_base.py  test_smoke.py
tests/annotation/: conftest.py  test_argilla_task_definitions.py  test_import.py  test_import_integration.py  test_import_unit.py  test_schemas.py  test_setup_integration.py  test_setup_settings.py  test_setup_unit.py
tests/infra/: test_annotation_packaging.py  test_dev_stack.py  test_dev_stack_integration.py
tests/integration/: __init__.py  _argilla_cleanup.py  conftest.py  test_annotation_calibration.py  test_annotation_import.py  test_annotation_setup.py  test_dev_stack_integration.py  test_eval.py  test_querygen.py
tests/packaging/: test_packaged_compose.py
tests/unit/: test_dev_stack.py  test_example_schemas.py  test_facade_lazy.py  test_lazy_import_error.py
tests/unit/annotation/: __init__.py  test_facade_lazy.py
tests/unit/api/: test_annotation.py  test_argilla_creds.py  test_error_log.py  test_eval.py  test_eval_score.py  test_export_api.py  test_querygen.py  test_status_api.py
tests/unit/cli/: conftest.py  test_cli_annotation.py  test_cli_eval.py  test_cli_querygen.py  test_parsing.py
tests/unit/core/: test_atomic_io.py  test_csv_io.py
tests/unit/scripts/: test_backfill_n_retrieved_chunks.py
website/: docusaurus.config.ts  package-lock.json  sidebars.ts  sidebarsApi.ts  sidebarsCommunity.ts
website/api/: annotation.md  overview.md  querygen.md
website/community/: contributing.md  team.md
website/docs/: introduction.md
website/docs/getting-started/: installation.md  why-use-pragmata.md
website/docs/guides/: annotation.md  querygen.md
website/src/css/: custom.css
website/src/pages/: index.module.css  index.tsx
(+173 files in other folders)
