[project]
name = "pragmata"
version = "0.0.1"
description = "Evidence-grounded evaluation framework for RAG systems with synthetic query generation, structured annotation, and model-assisted label inference for scalable scoring."
authors =[
  { name = "Sascha Göbel", email = "goebel@hertie-school.org" },
  { name = "Henry Baker", email =  "h.baker@hertie-school.org" },
  { name = "Luis Fernando Ramírez Ruiz" },
]
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.12"

dependencies = [
    "typer>=0.9",
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0",
    "langchain>=1.0.8",
]

[project.optional-dependencies]
test = ["pytest>=9.0", "argilla>=2.0,<3.0"]
lint = ["ruff>=0.14",]
type = [
    "mypy>=1.19",
    "types-PyYAML",
]
annotation = ["argilla>=2.0,<3.0",]
dev  = ["pragmata[test,lint,type,annotation]"]

[project.scripts]
pragmata = "pragmata.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: cross-component integration tests excluded from the default test run",
    "annotation: integration tests for the annotation interface, requiring a live Docker/Argilla stack",
    "querygen: integration tests for synthetic query generation",
]
addopts = "-m 'not integration'"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "D"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D100", "D101", "D102", "D103"]

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-var-parameters = true

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_any_generics = false
warn_return_any = false
